# ricoeur

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
research/: embedding-models.md  pm-reflection-v0.3.md  ricoeur-cli.md
src/ricoeur/: __init__.py  cli.py  config.py  db.py  indexer.py  search.py
src/ricoeur/importers/: __init__.py  base.py  chatgpt.py  claude.py
tests/: test_search.py
website/: index.html
